--- a/Chart.yaml
+++ b/Chart.yaml
@@ -22,3 +22,19 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
+
+
+
+dependencies:
+  - name: elasticsearch
+    version: 8.5.1
+    repository: https://helm.elastic.co
+    condition: global.elasticsearch.enabled
+  - name: kibana
+    version: 8.5.1
+    repository: https://helm.elastic.co
+    condition: global.kibana.enabled
+  - name: logstash
+    version: 8.5.1
+    repository: https://helm.elastic.co
+    condition: global.logstash.enabled
