--- a/values.yaml
+++ b/values.yaml
@@ -14,6 +14,29 @@ elasticsearch:
       "helm.sh/hook": pre-install
   secret:
     password: elastic   # password for elastic user
+  volumeClaimTemplate:
+    resources:
+      requests:
+        storage: 5Gi
 
 beat:
   elasticsearch_host: elasticsearch-master
+
+# logstash:
+#   logstashConfig:
+#     logstash.yml: |
+#         http.host: 0.0.0.0
+#         xpack.monitoring.enabled: false
+#         xpack.monitoring.elasticsearch.hosts: [ "http://elasticsearch-master:9200" ]
+
+  extraEnvs:
+  - name: "ELASTICSEARCH_USERNAME"
+    valueFrom:
+      secretKeyRef:
+        name: elasticsearch-master-credentials
+        key: username
+  - name: "ELASTICSEARCH_PASSWORD"
+    valueFrom:
+      secretKeyRef:
+        name: elasticsearch-master-credentials
+        key: password
